ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_26.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"low-sunday\", \"dominica-of-eastertide\"]"
expression: s.0
---
2025-04-26
First Vespers of Low Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
