ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_29.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--peter-martyr--martyr\", \"st--peter-martyr\"]"
expression: s.0
---
2025-04-29
Vespers of St. Peter Martyr, Martyr:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Martyrs
  Hymn:        Common of Martyrs
  Verse:       Common of Martyrs
  Magnificat:  Common of Martyrs
  Collect:     Proper
