ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_30.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--joseph-the-workman--spouse-of-the-blessed-virgin-mary-and-confessor\", \"st--joseph-the-workman\"]"
expression: s.0
---
2025-04-30
First Vespers of St. Joseph the Workman, Spouse of the Blessed Virgin Mary and Confessor:
Vespers:
  Antiphons:   Proper
  Psalms:      of Sunday (w.116)
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
