ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_05.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--pius-v--pope-and-confessor\", \"st--pius-v\"]"
expression: s.0
---
2025-05-05
Vespers of St. Pius V, Pope and Confessor:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
